Fixed header/footer left/right margin gap

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -77,8 +77,6 @@ h3 {
 .name-nav {
     display: flex;
     justify-content: space-between;
-    /* NEGATIVE MARGIN */
-    /* margin: 3rem -5% 0; */
     border-top: 1px rgb(225, 222, 222) solid;
     padding-top: 1rem;
     font-size: 1rem;
@@ -105,7 +103,7 @@ h3 {
 
 .main-header-container,
 .footer-container {
-    padding: 0 .75rem 1rem .75rem;
+    padding: 0 0 1rem 0;
     background-color: #f8f8f8;
 }
 
@@ -316,10 +314,6 @@ main p {
     .contact-info p {
         font-size: 1.1rem;
     }
-
-    /* .footer-container {
-        padding-bottom: 2.5rem;
-    } */
 
     .portfolio,
     .skills-h2 {
